listings/ch07-managing-growing-projects/listing-07-05/output.txt
$ cargo build
   Compiling restaurant v0.1.0 (file:///projects/restaurant)
error[E0603]: function `poner_en_espera` is private
 --> src/lib.rs:9:37
  |
9 |     crate::fachada::recepcion::poner_en_espera();
  |                                ^^^^^^^^^^^^^^^ private function
  |
note: the function `poner_en_espera` is defined here
 --> src/lib.rs:3:9
  |
3 |         fn poner_en_espera() {}
  |         ^^^^^^^^^^^^^^^^^^^^

error[E0603]: function `poner_en_espera` is private
  --> src/lib.rs:12:30
   |
12 |     fachada::recepcion::poner_en_espera();
   |                         ^^^^^^^^^^^^^^^ private function
   |
note: the function `poner_en_espera` is defined here
  --> src/lib.rs:3:9
   |
3  |         fn poner_en_espera() {}
   |         ^^^^^^^^^^^^^^^^^^^^

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0603`.
error: could not compile `restaurant`

To learn more, run the command again with --verbose.
